syntax = "proto3";
package post.v1;

import "post/v1/genesis.proto";

option go_package = "github.com/rollchains/tlock/x/post/types";

// LikesIMade defines the structure of likes I made
message LikesIMade {
  string post_id = 1;
  int64 timestamp = 2;
}

