syntax = "proto3";
package post.v1;

import "post/v1/genesis.proto";
import "google/api/annotations.proto";
import "post/v1/post.proto";

option go_package = "github.com/rollchains/tlock/x/post/types";

// Query provides defines the gRPC querier service.
service Query {
  // Params queries all parameters of the module.
  rpc Params(QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/post/v1/params";
  }

  // ResolveName allows a user to resolve the name of an account.
  rpc ResolveName(QueryResolveNameRequest) returns (QueryResolveNameResponse) {
    option (google.api.http).get = "/post/v1/name/{wallet}";
  }

  // QueryPost allows querying a specific post by its ID
  rpc QueryPost(QueryPostRequest) returns (QueryPostResponse) {
    option (google.api.http).get = "/post/v1/get/{post_id}";
  }
}

// QueryResolveNameRequest grabs the name of a wallet.
message QueryResolveNameRequest {
  string wallet = 1;
}

// QueryResolveNameResponse grabs the wallet linked to a name.
message QueryResolveNameResponse {
  string name = 1;
}

// QueryPostRequest defines the request for querying a post
message QueryPostRequest {
  string post_id = 1;
}

// QueryPostResponse defines the response for querying a post
message QueryPostResponse {
  Post post = 1;
}

// QueryParamsRequest is the request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is the response type for the Query/Params RPC method.
message QueryParamsResponse {
  // params defines the parameters of the module.
  Params params = 1;
}
